Removed unnecessary comments

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,4 @@
 <nav class="navbar fixed-top navbar-expand-sm">
-  <!-- <a class="navbar-brand" href="#home">
-    <img src="https://i.imgur.com/yoGFCR1.png" alt="Logo">
-  </a> -->
-  <!-- Toggle button -->
   <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbar-main">
     <i class="fas fa-bars"></i>
   </button>
@@ -539,6 +535,7 @@
             <div class="form-check-inline">
               <label class="form-check-label" for="radio10">10</label>
               <input type="radio" class="form-check-input" id="radio10" name="optradio" value="option10" required>
+              <!-- Invalid text should display on seperate line -->
               <div class="invalid-feedback" id="radio-invalid">Please select an option.</p></div>
             </div>
           </div>
