--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <img src="https://i.imgur.com/I9pE9CP.png" alt="Rupy Kaur logo" id="img-header">
+        <img src="src\images\Logo.png" alt="Rupy Kaur logo" id="img-header">
       </div>
     </div>
   </div>
@@ -60,7 +60,7 @@
         <a href="#about" class="btn">Learn More</a>
       </div>
       <div class="col-md-4">
-        <img src="https://i.imgur.com/MpQQ4Jw.jpg" alt="Photo of Rupy" class="img-bordered">
+        <img src="src\images\Rupy photo.jpg" alt="Photo of Rupy" class="img-bordered">
       </div>
     </div>
   </div>
