Added container-light class and style

--- a/src/index.html
+++ b/src/index.html
@@ -221,7 +221,7 @@
       </div>
     </div>
   
-    <div class="container-fluid container-ferns">
+    <div class="container-fluid container-light">
       <div class="container">
         <div class="row">
           <div class="col bordered-box">
